Implement Roles and Permissions (#1256)
Add support for Roles and Permissions using a custom RoleMapper configured on the server.